--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -19,6 +19,15 @@
 <p>“克雷门丘克（Kremenchuk），很多导弹（周六）上午袭击了该城市。”卢宁补充道。</p>
 <p>俄罗斯国防部发言人伊戈尔?科纳申科夫(Igor Konashenkov)在周六的简报中说，俄军袭击了克雷门丘克的炼油厂，摧毁了储存汽油和柴油的设施，这些设施为乌克兰东部和中部地区的部队提供了汽油和柴油燃料。</p>
 <p>卢宁说，三架俄罗斯飞机在当地时间周六上午6点左右实施了这次袭击。</p>
+<h3>乌克兰国家核能发电公司：扎波罗热核电站附近遭袭</h3>
+<p>位于扎波罗热（Zaporizhzhia）核电站附近的乌克兰恩纳霍达市（Enerhodar）据称周六发生了一系列爆炸。</p>
+<p>乌克兰国家核机构在其官方Telegram频道上报告了当天发生的袭击事件。</p>
+<p>据乌克兰国际文传电讯社（Interfax）报导，该市和附近的核电站自3月4日以来一直处于俄罗斯的控制之下。该核电站发电量占乌克兰五分之一以上，是欧洲最大核设施之一。</p>
+<p>乌克兰国家核能发电公司（Energoatom）在Telegram上发布的一个视频片段显示，据称的袭击过程中传来巨大的爆炸声，并可以看到有碎片飞散开来。</p>
+<p>该国有企业频道的第二个帖子称，在苏夫列门尼克（Sovremennik）文化中心附近可以听到爆炸声和迫击炮声，那里的居民举行了支持乌克兰的集会。</p>
+<p>“当抗议者开始散开时，入侵者乘坐警车抵达，并开始强迫当地居民进入警车。”该帖子写道，“几分钟后，该市被大规模的爆炸和炮击所震撼。”</p>
+<p>该机构说，有四人受伤并接受了医疗援助。</p>
+<p>乌克兰国家核能发电公司还声称，俄军开始干扰整个恩纳霍达市的电话和互联网通信。美联社说，该机构的说法无法立即得到核实。</p>
 <h3>乌军事区域长官：俄袭击第聂伯罗彼得罗夫斯克 铁路交通中断</h3>
 <p>乌克兰中部第聂伯罗彼得罗夫斯克地区（Dnipropetrovsk）地区军事管理部门负责人说，该地区铁路交通受到俄军袭击后中断，并引发一场火灾。</p>
 <p>瓦伦丁·列兹尼琴科（Valentyn Reznichenko）说，一枚火箭弹击中了巴甫洛赫拉德区（Pavlohrad）的铁路，迫使火车交通暂停。</p>
@@ -104,31 +113,25 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/2/n10356748.md#1" target="_blank">林辉：并未救国的“五四运动”只是胡闹而已</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/4/2/n13690935.htm">【更新4.2】俄导弹袭乌克兰中部两城市</a></p><hr>
