--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -127,7 +127,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/22/n10239833.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/10/18/n3709213.md#1" target="_blank">在东方健康博览会上见到李洪志师父</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10280071.md#1" target="_blank">路目：孔子诛杀少正卯 惹恼了谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
